--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 a {
-  color: #5fcf80;
+  color: var(--amarelo);
   text-decoration: none;
 }
 
@@ -157,7 +157,7 @@ h6 {
 }
 
 #header .logo a {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 #header .logo img {
@@ -375,7 +375,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .navbar-mobile .getstarted,
@@ -410,7 +410,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -595,11 +595,11 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .about .content .learn-more-btn {
-  background: #5fcf80;
+  background: var(--amarelo);
   color: #fff;
   border-radius: 50px;
   padding: 8px 25px 9px 25px;
@@ -710,7 +710,7 @@ section {
 }
 
 .courses .course-content h3 a:hover {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .courses .course-content p {
@@ -720,7 +720,7 @@ section {
 
 .courses .course-content h4 {
   font-size: 14px;
-  background: #5fcf80;
+  background: var(--amarelo);
   padding: 7px 14px;
   color: #fff;
   margin: 0;
@@ -802,7 +802,7 @@ section {
 }
 
 .trainers .member .social a:hover {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .trainers .member .social i {
@@ -943,7 +943,7 @@ section {
   display: block;
   width: 60px;
   height: 1px;
-  background: #5fcf80;
+  background: var(--amarelo);
   bottom: 0;
   left: 0;
 }
@@ -994,12 +994,12 @@ section {
 }
 
 .cource-details-tabs .nav-link:hover {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .cource-details-tabs .nav-link.active {
-  color: #5fcf80;
-  border-color: #5fcf80;
+  color: var(--amarelo);
+  border-color: var(--amarelo);
 }
 
 .cource-details-tabs .tab-pane.active {
@@ -1029,7 +1029,7 @@ section {
 
   .cource-details-tabs .nav-link.active {
     color: #fff;
-    background: #5fcf80;
+    background: var(--amarelo);
   }
 }
 
@@ -1090,7 +1090,7 @@ section {
 }
 
 .events .read-more a:hover {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 .events .card:hover img {
@@ -1098,11 +1098,11 @@ section {
 }
 
 .events .card:hover .card-body {
-  border-color: #5fcf80;
+  border-color: var(--amarelo);
 }
 
 .events .card:hover .card-body .card-title a {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 /*--------------------------------------------------------------
@@ -1162,7 +1162,7 @@ section {
 }
 
 .pricing ul i {
-  color: #5fcf80;
+  color: var(--amarelo);
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1180,7 +1180,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #5fcf80;
+  background: var(--amarelo);
   display: inline-block;
   padding: 8px 35px;
   border-radius: 50px;
@@ -1199,7 +1199,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #5fcf80;
+  background: var(--amarelo);
 }
 
 .pricing .advanced {
@@ -1211,7 +1211,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #5fcf80;
+  background: var(--amarelo);
   color: #fff;
 }
 
@@ -1342,13 +1342,13 @@ section {
 }
 
 #footer .credits a:hover {
-  color: #5fcf80;
+  color: var(--amarelo);
 }
 
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #5fcf80;
+  background: var(--amarelo);
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1518,6 +1518,8 @@ small{
   overflow: hidden;
   background-color: var(--laranja);
   border: 2px solid black;
+
+  margin-top: 20px;
 }
 
 .pricing .dois {
@@ -1971,6 +1973,9 @@ small{
   object-fit: cover;
 }
 
+.equipe-margem{
+  margin: 50px;
+}
 
 element.style {
 }
@@ -1980,28 +1985,45 @@ element.style {
   width: 100%;
 }
 
-.emp{
-  background-image: url("../imagens/wallpaper.jpeg");
-  background-repeat: no-repeat;
-  height: 100vh;
-  background-size: cover;
-}
-
-.descricao-emp{
-  background-color: var(--beterraba);
-  width: 50vw;
-  height: 45vh;
-  color: white;
-  line-height: 2rem;
-  padding: 20px;
-
-  border-radius: 20px;
-}
-
 .amarelo{
   color: var(--amarelo);
 }
 
 .cor-sobrenos{
-  background-color: #d9c0db;
+  background-color: transparent;
+  margin-top: 50px;
+}
+
+.relativo{
+  bottom: 50px;
+
+}
+
+
+/* About section */
+.alinhar{
+  margin: auto;
+}
+
+.about_section{
+  margin: 20px;
+}
+
+.about_img{
+  padding: 50px 5px;
+}
+
+
+.about_text{
+  padding: 15px;
+  color: white;
+}
+
+.fundo{
+  background-color: var(--beterraba);
+  border-radius: 10px;
+}
+
+.espacamento{
+  padding-right: 12px;
 }
