--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1923,7 +1923,7 @@ small{
   flex-wrap: wrap;
   width: 100%;
   height: 80vh;
-  background: linear-gradient(rgba(194, 194, 194, 0.707), rgba(255, 255, 255, 0.107)), url("../imagens/wallpaper-nos.jpg") top center;
+  background: linear-gradient(rgba(194, 194, 194, 0.707), rgba(255, 255, 255, 0.107)), url("../imagens/wallpaper-nos.jpeg") top center;
   background-size: cover;
   position: relative;
 }
@@ -1995,10 +1995,9 @@ element.style {
 }
 
 .relativo{
-  bottom: 50px;
-
+  padding: 10px;
+  bottom: 30px;
 }
-
 
 /* About section */
 .alinhar{
@@ -2006,7 +2005,7 @@ element.style {
 }
 
 .about_section{
-  margin: 20px;
+  margin: auto;
 }
 
 .about_img{
@@ -2026,4 +2025,13 @@ element.style {
 
 .espacamento{
   padding-right: 12px;
+}
+
+.letra{
+  font-weight: bold;
+  font-size: 1000px;
+}
+
+.services-nos {
+  background-color: var(--amarelo);
 }
