--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,10 +512,13 @@ section {
   overflow: hidden;
 }
 
-.section-bg {
+/* .section-bg {
+  background-color: var(--amarelo);
+} */
+
+.cor-numeros{
   background-color: var(--amarelo);
 }
-
 .section-title {
   padding-bottom: 40px;
 }
@@ -913,6 +916,7 @@ section {
     position: static;
     left: auto;
   }
+
 }
 
 /*--------------------------------------------------------------
@@ -1729,6 +1733,22 @@ small{
 }
 
 
+@media screen and (max-width: 667px) {
+  #hero-servicos h1 {
+    font-size: 30px;
+  }
+
+  .why-us-servicos .content{
+    height: 50vh;
+  }
+
+  .content-servicos{
+    margin: 10px;
+  }
+}
+
+
+
 
 /*--------------------------------------------------------------
                       PÁGINA EMOCIONAL
@@ -1963,7 +1983,7 @@ small{
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: auto 20px;
+  margin: auto ;
 }
 
 .swiper-slide img {
@@ -2094,4 +2114,76 @@ element.style {
 }
 .link-doe:hover{
   color: var(--laranja);
+}
+
+
+/*--------------------------------------------------------------
+                      PÁGINA NETWORKING
+                      PÁGINA NETWORKING
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+# Our Values
+--------------------------------------------------------------*/
+.our-values .card {
+  border: 0;
+  padding: 160px 20px 20px 20px;
+  position: relative;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.our-values .card-body {
+  z-index: 10;
+  background: rgba(255, 255, 255, 0.9);
+  padding: 15px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
+  transition: ease-in-out 0.4s;
+  border-radius: 5px;
+}
+
+.our-values .card-title {
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.our-values .card-title a {
+  color: #150517;
+}
+
+.our-values .card-text {
+  color: #5e5e5e;
+}
+
+.our-values .read-more a {
+  color: #777777;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+  transition: 0.4s;
+}
+
+.our-values .read-more a:hover {
+  text-decoration: underline;
+}
+
+.our-values .card:hover .card-body {
+  background: var(--beterraba);
+}
+
+.our-values .card:hover .read-more a,
+.our-values .card:hover .card-title,
+.our-values .card:hover .card-title a,
+.our-values .card:hover .card-text {
+  color: #fff;
+}
+
+@media screen and (max-width: 700px) {
+  .card-text{
+    font-size: 12px;
+  }
 }
