--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1520,7 +1520,7 @@ section {
 .cartao{
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-
+  transition: 0.6s;
   height: 40%;
 }
 
@@ -1542,6 +1542,7 @@ ul{
 .cartao:hover{
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+  transition: 0.6s;
 }
 
 
