--- a/assets/css/styleFunction.css
+++ b/assets/css/styleFunction.css
@@ -1119,6 +1119,8 @@ h6 {
   margin-bottom: 24px;
 }
 
+/*  */
+
 .contact .php-email-form .loading:before {
   content: "";
   display: inline-block;
