--- a/assets/css/chatbot.css
+++ b/assets/css/chatbot.css
@@ -54,6 +54,7 @@
     border-radius:5px;  
   /*   box-shadow: 0px 5px 35px 9px #464a92; */
     box-shadow: 0px 5px 35px 9px #ccc;
+    z-index: 1;
   }
   .chat-box-toggle {
     float:right;
